Fix: right image is a little too high

--- a/src/components/Signup.less
+++ b/src/components/Signup.less
@@ -50,6 +50,7 @@
     display: flex;
     align-content: center;
     align-items: center;
+    margin-top: 50px;
 
     @media (max-width: @screen-md) {
       display: none;
